Use create-react-kotlin-app as a base for frontend

--- a/backend/src/main/resources/views/index.pug
+++ b/backend/src/main/resources/views/index.pug
@@ -2,7 +2,7 @@ html
   head
     title= "Phöst-it 2"
   body
-    div#app
+    div#root
 
     script.
       var initialData = !{JSON.stringify(initialData).replace(/<\//g, "<\\/")};
