--- a/frontend/src/app/App.css
+++ b/frontend/src/app/App.css
@@ -1,6 +1,6 @@
 body {
   text-align: center;
-  background-color: #456;
+  background-color: #357;
   font-family: 'Source Sans Pro', sans-serif;
 }
 
@@ -24,6 +24,17 @@ body {
     font-family: 'Source Sans Pro', sans-serif;
     border: 1px solid #DDD;
     background-color: #EEE;
+    box-shadow: 2px 2px 2px #333;
+}
+
+.NoteBody {
+    height: 100%;
+    width: 100%;
+}
+
+.NoteBody table {
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .CreateNoteButton {
@@ -48,21 +59,38 @@ body {
 
 }
 
-.NoteContents {
+textarea.NoteContents {
+    resize: none;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    display: flex;
+    justifyContent: center;
+    alignItems: center;
+    padding: 0px;
+    background: transparent;
+    border: none;
+}
+
+.NoteContents,
+.NoteContents img {
+    max-width: 100%;
+    max-height: 100%;
+    overflow: hidden;
 }
 
 .NoteDragHandle {
-  visibility: hidden;
-  position: absolute;
-  width: 16px;
-  height: 16px;
-  bottom: 3px;
-  left: 3px;
-  background: gray;
-  background-position: bottom right;
-  padding: 0 5px 5px 0;
-  background-repeat: no-repeat;
-  background-origin: content-box;
-  box-sizing: border-box;
-  cursor: move;
+    visibility: hidden;
+    position: absolute;
+    width: 16px;
+    height: 16px;
+    bottom: 3px;
+    left: 3px;
+    background: gray;
+    background-position: bottom right;
+    padding: 0 5px 5px 0;
+    background-repeat: no-repeat;
+    background-origin: content-box;
+    box-sizing: border-box;
+    cursor: move;
 }
