--- a/frontend/src/app/App.css
+++ b/frontend/src/app/App.css
@@ -94,3 +94,36 @@ textarea.NoteContents {
     box-sizing: border-box;
     cursor: move;
 }
+
+button {
+    border: 1px solid rgb(255, 64, 120);
+    cursor: pointer;
+    text-decoration: none;
+
+    padding: 3px 8px;
+    outline: none;
+
+    height: 28px;
+    line-height: 16px;
+    border-radius: 2px;
+
+    color: white;
+    background-color: rgb(255, 64, 129);
+
+    text-align: center;
+    font-size: 14px;
+    text-transform: uppercase;
+    font-weight: 900;
+
+    user-select: none;
+
+    transition: background-color 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+}
+
+button + button {
+    margin-left: 6px;
+}
+
+button:hover {
+    background-color: rgb(255, 124, 199);
+}
